# brain

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  brain-schedule.yml  brain.config.yml  opencode.json  pyproject.toml  railway.toml
.claude/: settings.json
.claude/commands/: ask.md  continue.md  groom.md  in.md  list-efforts.md  playthrough.md  pr.md  promote.md  rebase.md  review.md  shape.md  spawn.md  sync.md  tend.md  zoom-out.md
.claude/personas/: README.md
.codex/: config.toml
.cursor/: mcp.json
.github/: pull_request_template.md
.github/workflows/: docs.yml  scheduled.yml  validate.yml
deploy/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
log/: log.md
sources/: README.md
sources/conversations/: 2026-07-10--chat-first-simplification.md  (+15 more)
tests/: test_brain_roundtrip.py  test_channels.py  test_connectors.py  test_consistency.py  test_identity_events.py  test_inbox.py  test_index_views.py  test_kernel_mechanisms.py  test_links_graph.py  test_mcp_serving.py  test_reach_surface.py  test_setup_doctor.py  test_workbench.py
tools/: brain  brain-agent.py  brain-mcp.py  brain.py  emulate-agentic.py  home-staleness.sh  install-timer.sh  notion-export.py  preflight.sh  serve-datasette.sh  setup-local.sh  sync-siblings.sh  ui-build.sh  workbench.py
ui/: .gitignore  Dockerfile  README.md  astro.config.mjs  package-lock.json  package.json  remark-rewrite-links.mjs  serve.mjs
views/: engineer.yml  operator.yml  pm.yml
wiki/: index.md
(+206 files in other folders)
